--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,12 @@ body::before {
 
 .email-wall, .music-player {
   background: rgba(0, 0, 0, 0.5);
-  border: 1px solid #39690e;
+  border: 1px solid #d0ffc0;
   border-radius: 12px;
   padding: 40px 20px;
   margin: 40px auto;
   max-width: 400px;
-  box-shadow: 0 0 10px #1d3d0f;
+  box-shadow: 0 0 5px #1d3d0f;
 }
 
 .logo {
