--- a/css/player.css
+++ b/css/player.css
@@ -1,6 +1,6 @@
 .player-container {
   background: rgba(0, 0, 0, 0.6);
-  border: 1px solid #39690e;
+  border: 1px solid #3e019a;
   border-radius: 12px;
   max-width: 800px;
   margin: 50px auto;
