--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ input[type="email"] {
 }
 
 button {
-  background: #39690e;
+  background: #3e019a;
   color: white;
   padding: 12px 30px;
   font-weight: bold;
