--- a/css/player.css
+++ b/css/player.css
@@ -25,8 +25,8 @@
 }
 
 .album-art {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border-radius: 8px;
   object-fit: cover;
   border: 1px solid #39690e;
@@ -45,7 +45,7 @@
 }
 
 .purchase-btn-top {
-  background: #39690e;
+  background: #89cff0;
   color: white;
   border: none;
   border-radius: 6px;
