--- a/css/player.css
+++ b/css/player.css
@@ -49,7 +49,7 @@
 }
 
 .purchase-btn-top {
-  background: #89cff0;
+  background: #3e019a;
   color: white;
   border: none;
   border-radius: 6px;
@@ -119,5 +119,5 @@ audio {
 }
 
 .unlock-banner button:hover {
-  background: #59a326;
+  background: #3e019a;
 }
