--- a/css/player.css
+++ b/css/player.css
@@ -108,7 +108,7 @@ audio {
 
 .unlock-banner button {
   padding: 10px 25px;
-  background: #39690e;
+  background: #3e019a;
   color: white;
   border: none;
   border-radius: 6px;
