--- a/css/style.css
+++ b/css/style.css
@@ -149,4 +149,20 @@ header {
 .ticket-link button:hover {
   background: #59a326;
 }
+.shopify-container {
+  background: rgba(0, 0, 0, 0.5);
+  border: 1px solid #3e019a;
+  border-radius: 12px;
+  margin: 40px auto;
+  padding: 30px 20px;
+  max-width: 800px;
+  box-shadow: 0 0 10px #1d3d0f;
+  color: #d0ffc0;
+}
+
+.shopify-title {
+  font-size: 1.6em;
+  margin-bottom: 20px;
+  color: #b6ff9c;
+}
 
