--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@ header {
   justify-content: center;
   align-items: center;
   margin-top: 5px;
+  margin-bottom: 40px; /* ⬅️ Add this line to create space below nav */
 }
 
 .main-nav a {
