--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  background: linear-gradient(to bottom, rgba(0,0,0,1) 90%, rgba(0,0,0,0) 100%);
+  background: transparent; /* No fade */
   z-index: 1000;
   padding: 20px 0;
   display: flex;
