--- a/css/player.css
+++ b/css/player.css
@@ -7,7 +7,7 @@
   padding: 20px;
   color: #d0ffc0;
   box-shadow: 0 0 15px #1d3d0f;
-  text-align: left;
+  text-align: center;
   overflow: hidden;
 }
 
@@ -29,8 +29,8 @@
 }
 
 .album-art {
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   border-radius: 8px;
   object-fit: cover;
   border: 1px solid #39690e;
