--- a/css/player.css
+++ b/css/player.css
@@ -13,7 +13,7 @@
 
 .player-header {
   display: flex;
-  flex-wrap: wrap;              /* allows it to wrap on smaller screens */
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
   gap: 20px;
@@ -51,9 +51,11 @@
   color: #a1d996;
   text-align: center;
 }
+
 .album-info {
   text-align: center;
 }
+
 .purchase-btn-top {
   background: #3e019a;
   color: white;
@@ -66,6 +68,7 @@
   align-self: flex-start;
   margin-top: 10px;
 }
+
 .purchase-btn-top:hover {
   background: #59a326;
 }
@@ -74,11 +77,10 @@
   max-height: 400px;
   overflow-y: auto;
   padding-right: 5px;
-  scrollbar-width: thin;          /* Firefox */
-  scrollbar-color: #59a326 black; /* Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: #59a326 black;
 }
 
-/* For Chrome, Edge, Safari */
 .track-scroll-container::-webkit-scrollbar {
   width: 8px;
 }
@@ -92,7 +94,6 @@
   border-radius: 4px;
   border: 1px solid black;
 }
-
 
 .track-list {
   display: flex;
