--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Orbitron', Arial, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   color: #d0ffc0;
   text-align: center;
   position: relative;
@@ -46,7 +46,6 @@ body::before {
   padding: 40px 20px;
   margin: 40px auto;
   max-width: 400px;
-  box-shadow: 0 0 5px #1d3d0f;
 }
 
 .music-player {
@@ -56,7 +55,6 @@ body::before {
   padding: 40px 20px;
   margin: 40px auto;
   max-width: 800px;
-  box-shadow: 0 0 5px #1d3d0f;
 }
 
 .logo {
@@ -164,7 +162,6 @@ header {
   margin: 40px auto;
   padding: 30px 20px;
   max-width: 800px;
-  box-shadow: 0 0 10px #1d3d0f;
   color: #d0ffc0;
 }
 
@@ -184,7 +181,6 @@ header {
   width: 100%;
   border-radius: 10px;
   border: 1px solid #39690e;
-  box-shadow: 0 0 8px #1d3d0f;
 }
 
 .ticket-link button {
