--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ header {
 }
 
 .main-nav a {
-  font-family: 'Orbitron', Arial, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 0.75em;
   color: #d0ffc0;
   text-decoration: none;
