--- a/css/player.css
+++ b/css/player.css
@@ -1,7 +1,7 @@
 /* player.css */
 
 .player-container {
-  background-color: rgba(34, 34, 34, 0.5); /* translucent dark background */
+  /* background-color: rgba(34, 34, 34, 0.5); /* translucent dark background */
   padding: 30px;
   text-align: center;
   width: 320px;
